Bug 206851 - When entering no password on authenticating the kioslave doesn't reprompt
Summary: When entering no password on authenticating the kioslave doesn't reprompt
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Unmaintained
Component: http (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-09 12:33 UTC by Michael Leupold
Modified: 2010-04-23 16:32 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael Leupold 2009-09-09 12:33:17 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

Steps to reproduce:
1. Open a website that requires authentication (I only tried with basic authentication)
2a. Enter a username, but not password
2b. Enter nothing
3. Konqueror shows a white page and the icon in the upper right keeps spinning

Expected behaviour:
kio_http tries to authenticate without a password and shows me an error that it couldn't authenticate, then it goes on to ask for credentials again.

I found this while testing a bug in kpasswdserver (unrelated). I think this bug is in the kioslave but I'm not sure as it might be kpasswdserver/slavebase as well. However other kioslaves don't have this bug (tried ftp and sftp).
Comment 1 Dawit Alemayehu 2010-04-23 16:32:49 UTC
SVN commit 1117956 by adawit:

- Do not make an exception for an empty username string when deciding to
show an error dialog. There is nothing special about empty username
strings even for protocols like ftp that support anonymous logins.

BUG:206851


 M  +1 -2      kpasswdserver.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1117956