- Do not make an exception for an empty username string when deciding to show an error dialog. There is nothing special about empty username strings even for protocols like ftp that support anonymous logins.

BUG:206851

svn path=/trunk/KDE/kdebase/runtime/; revision=1117956